The NEWS file for Guile Curses

Release 0.7
- rename set-field-type to set-field-type!
- return build system to a more traditional autotools build
- support NCURSES_OPAQUE
- better Cygwin 1.7.1 support

Release 0.6

- Make the SLK functions work.
- Better Guile 2.0.x compatibility.

Release 0.5

- A bug fix release.

Release 0.4

- Abstracted away the difference between wide and narrow functions
- Created a new xchar (rendered complex character) scheme type
  to replace the old complex char and chtype
- Created new xchar creation functions, like (bold #\x) and (blink
  #\x)
- Jiggled the naming conventions, adding exclamation points and
  question marks.
- Tried to add some Guile 1.6.x and Guile 2.0.x compatibility
- Changed the build system to no use recursive Makefiles
- Some attempt at building correctly on BSD-like systems

Release 0.3
- Modified API to be more scheme-like
- Modified SMOBs to make them work with the garbage collector.

Release 0.2
- Panel, menu, and form libraries wrapped
- Rough draft but complete documentation

Release 0.1
- Changed constanst from *xxx* style to XXX style
- Cygwin support
- Initial attempt at wrapping panel, menu library.
- Gucushell tool added

Release 0.0
- Initial alpha release





Local Variables:
mode: text
fill-column: 70
mode: auto-fill
End: