@@ -1,6 +1,26 @@
-## Process this file with automake to produce Makefile.in
+# Process this file with automake to produce Makefile.in
 
-SUBDIRS = ncurses doc m4 build_aux tools test po
+# Makefile for the top-level directory of GNU Guile-Ncurses.
+#
+# Copyright 2009, 2010 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as
+# published by the Free Software Foundation; either version 3, or (at
+# your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public
+# License along with this program.  If not, see
+# <http://www.gnu.org/licenses/>.
 
 ACLOCAL_AMFLAGS = -I m4 --install
-EXTRA_DIST = AUTHORS INSTALL NEWS README README.cygwin COPYING
+
+# Additional files to distribute
+EXTRA_DIST = README.cygwin
+
+SUBDIRS = ncurses doc m4 build_aux tools test po
